kubernetes/dilectic/_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: "dilectic"
  labels:
    name: "dilectic"
