kubernetes/dilectic/postgres-deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: postgres-deployment
  namespace: dilectic
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
        - name: postgres
          image: mdillon/postgis
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql-data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-claim
