kubernetes/dilectic/nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: dilectic
  labels:
    component: nginx
  annotations:
    quartic.io/healthcheck_path: /_status
    quartic.io/healthcheck_port: "80"
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    component: nginx
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: nginx
  namespace: dilectic
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d
          resources:
            requests:
              cpu: 100m
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
