kubernetes/dilectic/pogo.yml
apiVersion: v1
kind: Service
metadata:
  name: pogo
  namespace: dilectic
  labels:
    component: pogo
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
  selector:
    component: pogo
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: pogo
  namespace: dilectic
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: pogo
    spec:
      containers:
        - name: pogo
          image: eu.gcr.io/quartictech/pogo:0.0.0-2-g0560265
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
