kubernetes/dilectic/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: dilectic
  labels:
    component: postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    component: postgres
