kubernetes/dilectic/postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: dilectic
  labels:
    component: postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    component: postgres
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: postgres-deployment
  namespace: dilectic
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
        - name: postgres
          image: mdillon/postgis
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql-data
          resources:
            limits:
              memory: 4Gi
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-claim
