kubernetes/dilectic/tayo.yml
apiVersion: v1
kind: Service
metadata:
  name: tayo
  namespace: dilectic
  labels:
    component: tayo
  annotations:
    quartic.io/healthcheck_path: /healthcheck
    quartic.io/healthcheck_port: "8080"
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
  selector:
    component: tayo
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: tayo
  namespace: dilectic
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: tayo
    spec:
      containers:
        - name: tayo
          image: eu.gcr.io/quartictech/tayo:20
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
